@@ -1,0 +1,61 @@
+<!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<!--
+
+/**
+ * Copyright (c) 2001, 2002  Sun Microsystems, Inc.
+ * 
+ * See the file "license.terms" for information on usage and
+ * redistribution of this file, and for a DISCLAIMER OF ALL 
+ * WARRANTIES.
+ */
+
+-->
+<html>
+
+<head>
+<meta name="generator" content="HTML Tidy, see www.w3.org">
+<title>FreeTTS 1.1 for Emacspeak</title>
+</head>
+
+<body bgcolor="white">
+
+<center>
+  <table bgcolor="#bbbae2" border="0" width="100%">
+      <tr>
+	<td align=center width="100%">
+	<h2><i>FreeTTS 1.1 for Emacspeak</i> 
+	</td>
+      </tr>
+  </table>
+
+</center>
+<br>
+<h1> Welcome to FreeTTS for Emacspeak </h1>
+This is a stripped down version of FreeTTS for Emacspeak. It does not provide support for
+JSAPI or cluster unit voices. 
+
+<h2> How do I run the FreeTTS Emacspeak server? </h2>
+See these <a href="demo/freetts/Emacspeak/README.html"> instructions</a> on running Emacspeak.
+
+<h2> What is FreeTTS? </h2>
+FreeTTS is a speech synthesis system written entirely in Java. It is based upon Flite, a
+small runtime speech synthesis engine developed at Carnegie Mellon University. Flite is
+derived from the Festival Speech Synthesis System from the University of Edinburgh and the
+FestVox project from Carnegie Mellon University
+
+<h2> Where can I get the full version of FreeTTS? </h2>
+For a full version of FreeTTS, please to to <a
+href="http://freetts.sourceforge.net"> freetts.sourceforge.net </a>
+
+<h2> How do I build FreeTTS for Emacspeak</h2>
+<p>To build FreeTTS for Emacspeak you will need the Java 2 SDK, Standard Edition, v 1.4
+platform as well as GNU Make version 3.79 or higher. To build type "make" from the top
+level directory.
+
+<hr>
+See the <a href="../license.terms">license terms</a> and <a href="../acknowledgments.txt">acknowledgments</a>.<br>
+Copyright 2001, 2002 Sun Microsystems, Inc. All Rights Reserved. Use is subject to license terms.</li>
+</ul>
+</body>
+</html>
+
